--- a/projects/metroidvania.vcxproj
+++ b/projects/metroidvania.vcxproj
@@ -48,8 +48,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)\..\bin\windows\</OutDir>
-    <IncludePath>$(GTKDIR)\lib\gtk-3.0\include;$(GTKDIR)\lib\glib-2.0\include;$(GTKDIR)\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(GTKDIR)\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(GTKDIR)\lib\gtk-3.0\include;$(GTKDIR)\lib\glib-2.0\include;$(GTKDIR)\include;$(SolutionDir)\..\src\scintilla\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(GTKDIR)\lib;$(SolutionDir)\..\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -78,7 +78,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>gtk-win32-3.0.lib;gdk-win32-3.0.lib;atk-1.0.lib;gio-2.0.lib;pangowin32-1.0.lib;gdi32.lib;pangocairo-1.0.lib;gdk_pixbuf-2.0.lib;pango-1.0.lib;cairo.lib;gobject-2.0.lib;gmodule-2.0.lib;gthread-2.0.lib;glib-2.0.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gtk-win32-3.0.lib;gdk-win32-3.0.lib;atk-1.0.lib;gio-2.0.lib;pangowin32-1.0.lib;gdi32.lib;pangocairo-1.0.lib;gdk_pixbuf-2.0.lib;pango-1.0.lib;cairo.lib;gobject-2.0.lib;gmodule-2.0.lib;gthread-2.0.lib;glib-2.0.lib;scintilla.a;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>/ENTRY:mainCRTStartup %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
